--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -23,6 +23,14 @@
     "markAbove": "Mark above as read",
     "markBelow": "Mark below as read",
     "daysAgo": "{days,plural, =1{Over 1 day ago}other{Over {days} days ago}}",
+    "@daysAgo": {
+      "description": "Number of day(s) ago",
+      "placeholders": {
+        "days": {
+          "type": "int"
+        }
+      }
+    },
     "star": "Star",
     "unstar": "Unstar",
     "share": "Share",
