--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -102,5 +102,6 @@
     "unreadSourceTip": "You can long press on the title of this page to toggle between all and unread subscriptions.",
     "uncategorized": "Uncategorized",
     "showUncategorized": "Show uncategorized",
-    "serviceExists": "A service already exists. Please log out before importing."
+    "serviceExists": "A service already exists. Please log out before importing.",
+    "useTabletLayout": "Use tablet layout"
   }
