added pocket capability

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -33,6 +33,8 @@
     },
     "star": "Favorisieren",
     "unstar": "Favorit entfernen",
+    "pocket": "Tasche",
+    "unpocket": "Tasche entfernen",
     "share": "Teilen",
     "cancel": "Abbrechen",
     "close": "Schließen",
@@ -52,6 +54,7 @@
     "swipeRight": "Nach rechts wischen",
     "toggleRead": "Wechsel gelesen/ungelesen",
     "toggleStar": "Wechsel Favorit",
+    "togglePocket": "Wechsel Tasche",
     "openMenu": "Menü offenen",
     "openExternal": "Extern öffnen",
     "fontSize": "Schriftgröße",
