--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -33,6 +33,8 @@
     },
     "star": "Star",
     "unstar": "Unstar",
+    "pocket": "Pocket",
+    "unpocket": "Unpocket",
     "share": "Share",
     "cancel": "Cancel",
     "close": "Close",
@@ -52,6 +54,7 @@
     "swipeRight": "Swipe right",
     "toggleRead": "Toggle read",
     "toggleStar": "Toggle star",
+    "togglePocket": "Toggle pocket",
     "openMenu": "Open menu",
     "openExternal": "Open externally",
     "fontSize": "Font size",
