--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -33,6 +33,8 @@
     },
     "star": "Favorito",
     "unstar": "No favorito",
+    "pocket": "Bosillo",
+    "unpocket": "No bosillo",
     "share": "Compartir",
     "cancel": "Cancelar",
     "close": "Cerrar",
@@ -52,6 +54,7 @@
     "swipeRight": "Deslizar a la derecha",
     "toggleRead": "Alternar leídos",
     "toggleStar": "Alternar favoritos",
+    "togglePocket": "Alternar bolsillo",
     "openMenu": "Abrir menú",
     "openExternal": "Abrir externamente",
     "fontSize": "Tamaño de fuente",
