--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,6 +2,7 @@
     "all": "All Articles",
     "unread": "Unread",
     "starred": "Starred",
+    "pocketed": "Pocketed",
     "allArticles": "All articles",
     "allSubscriptions": "All subscriptions",
     "filter": "Filter",
@@ -68,6 +69,7 @@
     "invalidValue": "Invalid value",
     "unreadOnly": "Unread only",
     "starredOnly": "Starred only",
+    "pocketedOnly": "Pocketed only",
     "search": "Search",
     "editKeyword": "Edit keyword",
     "clearSearch": "Clear search",
