--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -2,6 +2,7 @@
     "all": "Todos",
     "unread": "Sin leídos",
     "starred": "Favoritos",
+    "pocketed": "Embolsada",
     "allArticles": "Todos los artículos",
     "allSubscriptions": "Todas las suscripciones",
     "filter": "Filtrar",
@@ -68,6 +69,7 @@
     "invalidValue": "Valor no válido",
     "unreadOnly": "Solo sin leídos",
     "starredOnly": "Solo favoritos",
+    "pocketedOnly": "Solo bolsillo",
     "search": "Buscar",
     "editKeyword": "Editar palabra",
     "clearSearch": "Limpiar búsqueda",
